--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
   "homepage": "https://github.com/JohnShalem/web3modal#readme",
   "devDependencies": {
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "@wagmi/core": "^1.4.7",
+    "@web3modal/wagmi": "^3.3.2",
+    "viem": "^1.19.8"
   }
 }
